# SO-projeto

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  app  cmake_install.cmake  file.txt  files.c  header.h  main  main.c  pipes.c  processes.c  programs.c  run.sh  strings.c  system.c
.cmake/api/v1/reply/: cache-v2-37c2075b510fc25ec400.json  cmakeFiles-v1-43818c4d214c09ca0678.json  codemodel-v2-f645964043d19f7f1ae4.json  index-2023-11-30T09-42-46-0619.json  target-app-169125ebdd82a9ac9c82.json
